--- a/project.json
+++ b/project.json
@@ -4,7 +4,7 @@
     "description": "Hello, world! examples in different programming languages.",
     "author": "coding-samurai",
     "url": "https://github.com/coding-samurai/hello-world",
-    "licenses": [
+    "license": [
         {
             "item": "project",
             "type": "The MIT License (MIT)",
